--- a/resources/media/base.css
+++ b/resources/media/base.css
@@ -16,13 +16,13 @@ h1 {
     right: 0px;
     width: 100%;
     height: 100%;
+    border-spacing: 4px;
+    table-layout: fixed;
 }
 
 #side_bar {
     display: table-cell;
     width: 80px;
-    margin: 4px;
-
     background-color: #666;
     text-align: center;
 }
