function for posting messages + idea scrollbar behavior

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html><head>
+  <script src="media/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" 
           src="media/base.js"></script>
   <link rel="stylesheet" type="text/css" href="media/base.css">
@@ -10,10 +11,12 @@
         one
       </div>
       <div id="lhs">
-        two
+        <div class="viewport">
+        </div>
       </div>
       <div id="rhs">
-        three
+        <div class="viewport">
+        </div>
       </div>
   </div>
 </body></html>
