--- a/resources/media/base.css
+++ b/resources/media/base.css
@@ -23,13 +23,45 @@ h1 {
 #side_bar {
     display: table-cell;
     width: 80px;
-    background-color: #666;
+    background-color: rgba(128, 128, 128, 0.5);
     text-align: center;
 }
 
 #lhs, #rhs {
+    position: relative;
     display: table-cell;
-    background-color: #888;
+    background-color: rgba(180, 180, 180, 0.5);
     text-align: center;
-    vertical-align: bottom;
+}
+
+.viewport {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.message {
+    position: relative;
+    margin: 10px;
+    margin-top: 30px;
+    padding: 8px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 8px;
+    color: black;
+}
+
+.message .sender {
+    position: absolute;
+    top: -1em;
+    left: 5px;
+}
+
+.message .timestamp {
+    position: absolute;
+    top: -1em;
+    right: 5px;
 }
