--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -8,7 +8,8 @@
 <body>
   <div id="layout">
       <div id="side_bar">
-        one
+        <img src="media/dispatcher_icon.png" />
+        <img src="media/settings_icon.png" />
       </div>
       <div id="lhs">
         <div class="viewport">
