--- a/resources/media/base.css
+++ b/resources/media/base.css
@@ -52,6 +52,8 @@ h1 {
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 8px;
     color: black;
+    text-align: left;
+    white-space: pre-wrap;
 }
 
 .message .sender {
