--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -1,4 +1,20 @@
 <!doctype html>
+<!-- 
+  This file is part of Dispatcher
+
+  Dispatcher is free software: you can redistribute it and/or modify
+  it under the terms of the GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  Dispatcher is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  GNU General Public License for more details.
+
+  You should have received a copy of the GNU General Public License
+  along with Dispatcher.  If not, see <http://www.gnu.org/licenses/>.
+ -->
 <html><head>
   <script src="media/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" 
